# opengltest-rust

./: Cargo.toml  imgui.ini
res/shaders/: basic.shader
src/: glcall.rs  index_buffer.rs  main.rs  matrix.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer.rs  vertex_buffer_layout.rs
src/tests/: mod.rs  test_clear_color.rs  test_texture2d.rs
