[package]
name = "opengltest"
version = "0.1.0"
authors = ["MarcusTL12 <marcuspaafjellet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = ""
image = ""

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false
